--- a/.github/workflows/isort.yaml
+++ b/.github/workflows/isort.yaml
@@ -6,39 +6,46 @@ name: isort
 # events but only for the master branch
 on:
   pull_request:
-    branches: 
+    branches:
       - master
       - develop
     types:
-      - closed
+      - opened
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   format:
 
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.x
     # The type of runner that the job will run on
     timeout-minutes: 60
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: olance/isort-action@v1.0.0
-      with:
-        args: .
+    - uses: actions/checkout@v1
+
+    - name: Prerequeist
+      run: pip3 install black --no-cache --user
+
+    - name: isort
+      run: python3 -m isort .
 
     - name: Commit change
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A && git diff-index --cached --quiet HEAD || git commit -m 'fix: isort'
-
     - name: Push
-      run: ad-m/github-push-action@v0.5.0
+      uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.head_ref}}
 
     - name: Slack-Notification
       uses: 8398a7/action-slack@v2.6.0
