fix: 의존성 패키지 설치 오타 수정
 Refs: #11

--- a/.github/workflows/isort.yaml
+++ b/.github/workflows/isort.yaml
@@ -31,7 +31,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Prerequeist
-      run: pip3 install black --no-cache --user
+      run: pip3 install isort --no-cache --user
 
     - name: isort
       run: python3 -m isort .
