--- a/.github/workflows/auto-black.yaml
+++ b/.github/workflows/auto-black.yaml
@@ -22,15 +22,17 @@ jobs:
         run: |
           pip3 install black --no-cache --user
 
-      - name: Check black & Commit
+      - name: black
+        run: python3 -m black .
+
+      - name: Commit
         run: |
-          python3 -m black .
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add -A && git diff-index --cached --quiet HEAD || git commit -m 'fix: black'
 
       - name: Push
-        uses: ad-m/github-push-action@master
+        uses: ad-m/github-push-action@v0.5.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.head_ref}}
