--- a/.github/workflows/pytest.yaml
+++ b/.github/workflows/pytest.yaml
@@ -19,18 +19,18 @@ jobs:
 
       - name: Prerequeist
         run: |
-          pip3 install pytest --no-cache --user
+          pip3 install pytest pytest-cov --no-cache --user
           pip3 install -r requirements.txt
 
       - name: pytest
-        run: python3 -m pytest tests/*
+        run: python3 -m pytest --cov=./ tests/*
 
       - name: Slack-Notification
         uses: 8398a7/action-slack@v2.6.0
         with:
           status: ${{job.status}}
           fields: repo,message,commit,author,action,eventName,ref,workflow
-          author_name: Pytest 알리미
+          author_name: pytest-cov 알리미
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
