--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Lint & Test
+name: Black / Isort / Pytest
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -16,6 +16,10 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.x
     timeout-minutes: 60
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -23,21 +27,40 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
-    - name: prerequisite
-      run: echo "prerequisite"
+    - name: Prerequeist 
+      run: |
+        pip3 install black --no-cache --user
+        pip3 install isort --no-cache --user
+        pip3 install pytest pytest-cov --no-cache --user
+        pip3 install -r requirements.txt --user
 
-    - name: linting
-      run: echo "Lint Test"
+    - name: isort
+      run: python3 -m isort .
 
-    - name: Test
-      run: echo "Test"
+    - name: black
+      run: python3 -m black .
+
+    - name: pytest
+      run: python3 -m pytest --cov=./ tests/*
+
+    - name: commit
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
    
+    - name: push
+      uses: ad-m/github-push-action@v0.5.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.head_ref}}
+
     - name: Slack-Notification
       uses: 8398a7/action-slack@v2.6.0
       with:
         status: ${{job.status}}
         fields: repo,message,commit,author,action,eventName,ref,workflow
-        author_name: 린트 알리미
+        author_name: 테스트 알리미
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
