--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,6 +45,7 @@ jobs:
 
     - name: commit
       run: |
+        git pull origin ${{ github.head_ref}}
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
