--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  pytest:
+  PR-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     strategy:
@@ -25,41 +25,31 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
 
     - name: Prerequeist 
       run: |
         pip3 install pytest pytest-cov --no-cache --user
+        pip3 install black --no-cache --user
+        pip3 install isort --no-cache --user
         pip3 install -r requirements.txt --user
 
-    - name: pytest
+    - name: test with pytest
       run: python3 -m pytest --cov=./ tests/*
 
-  isort:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version:
-          - 3.x
-    timeout-minutes: 60
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v1
-
-    - name: Prerequeist 
-      run: |
-        pip3 install isort --no-cache --user
-
-    - name: isort
+    - name: apply isort
       run: python3 -m isort .
+
+    - name: apply black
+      run: python3 -m black .
 
     - name: commit
       run: |
+        git fetch origin
+        git merge origin ${{ github.head_ref }}
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort'
+        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: black'
    
     - name: push
       uses: ad-m/github-push-action@v0.5.0
@@ -67,46 +57,14 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: ${{ github.head_ref}}
 
-  black:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version:
-          - 3.x
-    timeout-minutes: 60
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v1
-
-      - name: Prerequeist 
-        run: |
-          pip3 install black --no-cache --user
-
-      - name: apply black
-        run: python3 -m black .
-
-      - name: commit
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: black'
-   
-      - name: push
-        uses: ad-m/github-push-action@v0.5.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.head_ref}}
-
-      - name: Slack-Notification
-        uses: 8398a7/action-slack@v2.6.0
-        with:
-          status: ${{job.status}}
-          fields: repo,message,commit,author,action,eventName,ref,workflow
-          author_name: PR Notification
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-        if: always()
+    - name: Slack-Notification
+      uses: 8398a7/action-slack@v2.6.0
+      with:
+        status: ${{job.status}}
+        fields: repo,message,commit,author,action,eventName,ref,workflow
+        author_name: PR Notification
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
+      if: always()
 
