--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -46,7 +46,7 @@ jobs:
     - name: commit
       run: |
         git fetch origin
-        git merge origin ${{ github.head_ref }}
+        git merge origin/${{ github.head_ref }}
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: black'
