--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,7 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+      run: git pull origin {{github.head_ref}}
     
     - name: Prerequeist 
       run: |
@@ -56,14 +57,14 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: black'
+        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
    
     
     - name: push
       uses: ad-m/github-push-action@v0.5.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.head_ref}}
+        branch: ${{ github.head_ref }}
 
     
     - name: Slack-Notification
