--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,47 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
+    Lint:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - 3.x
+    timeout-minutes: 60
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+
+    - name: Prerequeist
+      run: |
+        pip3 install black --no-cache --user
+        pip3 install isort --no-cache --user
+        pip3 install -r requirements.txt --user
+
+    - name: apply isort
+      run: python3 -m isort .
+
+
+    - name: apply black
+      run: python3 -m black .
+
+
+    - name: commit
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
+
+
+    - name: push
+      uses: ad-m/github-push-action@v0.5.0
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        branch: ${{ github.head_ref }}
+
   PR-test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -27,14 +68,9 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
       
-    - name: update latest code
-      run: git pull origin {{github.head_ref}}
-    
     - name: Prerequeist 
       run: |
         pip3 install pytest pytest-cov --no-cache --user
-        pip3 install black --no-cache --user
-        pip3 install isort --no-cache --user
         pip3 install -r requirements.txt --user
 
     - name: test with pytest
@@ -46,28 +82,6 @@ jobs:
         file: ./coverage.xml
         flags: tests
         fail_ci_if_error: true
-    
-    - name: apply isort
-      run: python3 -m isort .
-
-    
-    - name: apply black
-      run: python3 -m black .
-
-    
-    - name: commit
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
-   
-    
-    - name: push
-      uses: ad-m/github-push-action@v0.5.0
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.head_ref }}
-
     
     - name: Slack-Notification
       uses: 8398a7/action-slack@v2.6.0
