--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
     # This workflow contains a single job called "build"
-    Lint:
+    isort:
         # The type of runner that the job will run on
         runs-on: ubuntu-latest
         strategy:
@@ -35,6 +35,36 @@ jobs:
 
             - name: apply isort
               run: python3 -m isort .
+
+            - name: commit
+              run: |
+                  git config --local user.email "action@github.com"
+                  git config --local user.name "GitHub Action"
+                  git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
+
+            - name: push
+              uses: ad-m/github-push-action@v0.5.0
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  branch: ${{ github.head_ref }}
+    black:
+        # The type of runner that the job will run on
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                python-version:
+                    - 3.x
+        timeout-minutes: 60
+
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - uses: actions/checkout@v2
+
+            - name: Prerequeist
+              run: |
+                  pip3 install black --no-cache --user                  
+                  pip3 install -r requirements.txt --user
 
             - name: apply black
               run: python3 -m black .
