--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,18 +1,17 @@
 # This is a basic workflow to help you get started with Actions
 
-name: PR test
+name: Lint
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
     pull_request:
         branches:
-            - master
             - develop
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-    Pytest:
+    black&isort:
         # The type of runner that the job will run on
         runs-on: ubuntu-latest
         strategy:
@@ -30,18 +29,27 @@ jobs:
 
             - name: Prerequeist
               run: |
-                  pip3 install pytest pytest-cov --no-cache --user
+                  pip3 install black --no-cache --user
+                  pip3 install isort --no-cache --user                  
                   pip3 install -r requirements.txt --user
 
-            - name: test with pytest
-              run: python3 -m pytest --cov-report=xml --cov=./ tests/*
+            - name: apply isort
+              run: python3 -m isort .
 
-            - name: upload coverage to codecov
-              uses: codecov/codecov-action@v1.0.10
+            - name: apply black
+              run: python3 -m black .
+
+            - name: commit
+              run: |
+                  git config --local user.email "action@github.com"
+                  git config --local user.name "GitHub Action"
+                  git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
+
+            - name: push
+              uses: ad-m/github-push-action@master
               with:
-                  file: ./coverage.xml
-                  flags: tests
-                  fail_ci_if_error: true
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  branch: ${{ github.head_ref }}
 
             - name: Slack-Notification
               uses: 8398a7/action-slack@v3
@@ -52,4 +60,4 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # required
                   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }} # required
-              if: always()
+              if: failure()
