feat: 멘션 알람과 Test알람 분리
 Refs: #11

--- a/.github/workflows/metion-to-slack.yaml
+++ b/.github/workflows/metion-to-slack.yaml
@@ -25,6 +25,6 @@ jobs:
               with:
                   repo-token: ${{ secrets.GITHUB_TOKEN }}
                   configuration-path: .github/mention-to-slack.yml
-                  slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL }}
+                  slack-webhook-url: ${{ secrets.SLACK_WEBHOOK_URL_MENTION }}
                   icon-url: https://img.icons8.com/color/256/000000/github-2.png
                   bot-name: "GitHub Bot"
