--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,7 +7,7 @@ name: Lint
 on:
     pull_request:
         branches:
-            - develop
+            - master
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
