--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ on:
     pull_request:
         branches:
             - master
-            - develop
+            - env
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
