fix: fixed lint.yaml
 Refs: #43

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -30,6 +30,7 @@ jobs:
 
             - name: Prerequeist
               run: |
+                  pip3 install --upgrade pip setuptools
                   pip3 install black --no-cache --user
                   pip3 install isort --no-cache --user                  
                   pip3 install -r requirements.txt --user
