--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -4,11 +4,7 @@ name: Lint
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on:
-    pull_request:
-        branches:
-            - master
-            - env
+on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
