--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,7 +22,7 @@ jobs:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v2
               with:
-                  fetch-depth: 0
+                  ref: ${{ github.event.push.head.sha }}
 
             - name: Prerequeist
               run: |
