--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,7 +22,7 @@ jobs:
             # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
             - uses: actions/checkout@v2
               with:
-                  ref: ${{ github.event.push.head.sha }}
+                  ref: ${{ github.BRANCH }}
 
             - name: Prerequeist
               run: |
@@ -47,7 +47,7 @@ jobs:
               uses: ad-m/github-push-action@master
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  branch: ${{ github.event.push.head.sha }}
+                  branch: ${{ github.BRANCH }}
 
             - name: Slack-Notification
               uses: 8398a7/action-slack@v3
