--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -38,18 +38,12 @@ jobs:
             - name: apply black
               run: python3 -m black .
 
-            - name: commit
+            - name: commit & push
               run: |
                   git config --local user.email "action@github.com"
                   git config --local user.name "GitHub Action"                                    
                   git add -A && git diff-index --cached --quiet HEAD || git commit -m 'style: isort/black'
                   git push
-
-            #- name: push
-            #  uses: ad-m/github-push-action@master
-            #  with:
-            #      github_token: ${{ secrets.GITHUB_TOKEN }}
-            #      branch: ${{ github.BRANCH.head }}
 
             - name: Slack-Notification
               uses: 8398a7/action-slack@v3
