feat: slack-github간 연동멤버 리스트 업데이트

--- a/.github/mention-to-slack.yml
+++ b/.github/mention-to-slack.yml
@@ -7,3 +7,7 @@ soeque1: "U017AC04MH7"
 Ykmoon: "U017AC35WGH"
 Taekyoon: "U017MKMHYCD"
 Dohppak: "U017ZD33PC1"
+MrSyee: "U019P9YG75X"
+warnikchow: "U019AFE4N93"
+gogyzzz: "U018S8UGYP3"
+Beomi: "U018AMVC92S"
