--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,8 +7,8 @@ name: Lint
 on: 
   push:
     - master
-    - feature*
-    - hotfix*
+    - feature/*
+    - hotfix/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -33,8 +33,7 @@ jobs:
               run: |
                   pip3 install --upgrade pip setuptools
                   pip3 install black --no-cache --user
-                  pip3 install isort --no-cache --user                  
-                  pip3 install -r requirements.txt --user
+                  pip3 install isort --no-cache --user
 
             - name: apply isort
               run: python3 -m isort .
