--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,9 +6,10 @@ name: Lint
 # events but only for the master branch
 on: 
   push:
-    - master
-    - feature/*
-    - hotfix/*
+    branches:
+      - master
+      - feature/*
+      - hotfix/*
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
